# GuitarRepo

./: Dockerfile  README.md  app.py  pyproject.toml
static/: type.css
templates/: contact.html  down_list.html  index.html  play.html  score.html  start.html  start2.html
